Change Log

perdition
Mail retrieval proxy server
Copyright (C) 1999-2002  Horms <horms@vergenet.net>
----------------------------------------------------------------------

XXX
(Horms)

  * Version XXX
  - Uninstall symlinks created by -hook targets in various Makefile.am
  - Handle the return of an empty string from db_getserver routines


----------------------------------------------------------------------

19th April 2002
(Horms)

  * Version 0.1.10beta2
  - Better loging of problems when connecting to real-servers
  - Debian init scripts and packaging updated.
  - Added LDAP schema, perdition.schema
    This uses the Private Enteprise Number 12856, which belongs
    to Verge Networks, which intern belongs to the author Horms
  - -X is no longer a synonym for --lower_case
  - Addded POP3S and IMAP4S protocol labels
  - Updated signal handlers to reflect changes in libvanessa_socket
  - Change UID and GID before forking rather than after
  - Change process title at different stages of a perdition processes 
    life
  - Added ODBC perditondb module
  - Added query keys.



----------------------------------------------------------------------

14th March 2002
(Horms)

  * Version 0.1.10beta1
  - Fixed problem with setting ssl_key_file.
  - Brief documentation for how to generate .pem files for SSL/TLS
  - Handle systems that don't have socklen_t
  - Duplicate strings before calling vanessa_dynamic_array_split_str()
    to avoid strings being truncated in debuging output.
  - Fixed error in perditiondb_mysql_makedb whereby privelages were
    always granted to dbPerdition regarless of the requested
    name of the database.
  - Free internally allocated memory if something goes wrong in token_read()
  - Setting ssl-mode to none now actually works
  - Link ldap code against libresolv if it is present on the system. Eric Fagan
  - Fix doble frees relating to username_mangle.
  - PostgreSQL module now has the same alternate column name support